# spwhitton-dotfiles

./: .Xdefaults  .Xmodmap  .Xmodmap-Apple  .abcde.conf  .bashrc  .bboardrc  .cadaverrc  .caffrc  .debpaste.rc  .devscripts  .dput.cf  .extract_urlview  .fonts.conf  .gbp.conf  .ghci  .gitconfig  .gitignore  .globgitignore  .gtk-bookmarks  .hgrc  .inputrc  .keysnail.js  .lintianrc  .mailcap  .mailrc  .mairixrc  .mbsyncrc  .mg  .mpdconf  .mpdconf-stream  .mrtrust  .msmtprc  .muttprintrc  .muttrc  .notmuch-config  .offlineimaprc  .procmailrc  .profile  .quiltrc  .reportbugrc  (+16 more)
.cabal/: config
.caff/gnupghome/: gpg.conf
.config/: mimeapps.list  redshift.conf  user-dirs.dirs
.config/Thunar/: uca.xml
.config/anacron/: spwhitton_hephaestus.silentflame.com  spwhitton_iris.silentflame.com  spwhitton_shortgeese.silentflame.com  swhitton_artemis.silentflame.com  (+1 more)
.config/aria2/: aria2.conf
.dput.d/: ftp-eu.json  mentors.json  ssh-upload.json
.emacs.d/: abbrev_defs  init-custom.el  init-haskell.el  init-org.el  init-term.el  init.el
.gnupg/: dirmngr.conf  gpg-agent.conf  gpg.conf
.irssi/: default.theme  startup
.mutt/: aliases  groups  mailcap
.ncmpcpp/: config  keys
.pandoc/: default.csl
.recoll/: recoll.conf
.ssh/: config
.xkb/: xkbevd.cf
.xmonad/: xmonad.hs
archive/: .Xdefaults  .extract_urlview  .gtk-bookmarks  .keysnail.js  .mairixrc  .xsessionrc  .zshrc
lib/: pro.terminal  spw.sh  tputfs.sh  try.sh  userChrome.css
src/: .mrconfig
src/hscripts/: hscripts.cabal  stack.yaml
src/hscripts/src/: orgblosxom2ikiwiki.hs  sunsupmetoo.hs  video4ipad.hs
(+166 files in other folders)
