name:                hscripts
version:             0.0.0.0
synopsis:            Haskell ~/bin-style scripts that need to be compiled
homepage:            https://github.com/spwhitton/dotfiles
license:             GPL-3
author:              Sean Whitton
build-type:          Simple
cabal-version:       >=1.10

executable video4ipad
  hs-source-dirs:      src
  main-is:             video4ipad.hs
  build-depends:       base
                     , directory
                     , filepath
                     , lens
                     , mtl
                     , optparse-applicative
                     , process
  default-language:    Haskell2010
